[Fix] Board title overflow mobile

--- a/src/components/BoardTitle/styles.scss
+++ b/src/components/BoardTitle/styles.scss
@@ -1,9 +1,13 @@
 .board-topbar {
+  // width: 100vw;
   padding: 8px 16px;
   display: flex;
   justify-content: space-between;
   background-color: rgb(248, 249, 251);
+  overflow: hidden;
   .left {
+    flex-grow: 1;
+    // flex-wrap: wrap;
     .board-title {
       border: none;
       box-shadow: none;
@@ -15,9 +19,17 @@
       &:hover {
         background-color: rgb(234, 235, 236);
       }
+      > span {
+        max-width: 50vw;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        display: block;
+      }
     }
   }
   .right {
+    // flex-grow: 1;
     > button {
       height: 38px;
       border: none;
